jsonschemadsl2ecore.trafo.opt/test/test79/invalidtests/example5.test79
{
	"prop1":1.3,
	"prop2":1.0
}